--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li><a href="#servicios">Servizi</a></li>
                         <li><a href="#ubicacion">Ubicazione</a></li>
                         <li><a href="#contacto">Contatto</a></li>
-                        <li><a href="news/index.html">Noticias</a></li>
+                        <li><a href="news/">Noticias</a></li>
                         <li><a href="https://wa.me/+393519389555" target="_blank" class="btn-reserva">
                             <i class="fab fa-whatsapp"></i>
                             <span>Prenota Ora</span>
