--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><a href="#ubicacion">Ubicazione</a></li>
                         <li><a href="#contacto">Contatto</a></li>
                         <li><a href="news/">Noticias</a></li>
-                        <li><a href="https://wa.me/+393519389555" target="_blank" class="btn-reserva">
+                        <li><a href="https://wa.me/+393519389555?text=Hola! Vorrei prenotare un campo da padel o una lezione privata. Potete aiutarmi?" target="_blank" class="btn-reserva">
                             <i class="fab fa-whatsapp"></i>
                             <span>Prenota Ora</span>
                         </a></li>
@@ -85,7 +85,7 @@
                         <p>+39 351 938 9555</p>
                     </div>
                 </a>
-                <a href="https://wa.me/+393519389555" target="_blank" class="contact-option">
+                <a href="https://wa.me/+393519389555?text=Ciao! Vorrei inviare un messaggio rapido. Potete aiutarmi?" target="_blank" class="contact-option">
                     <i class="fab fa-whatsapp"></i>
                     <div>
                         <h3>WhatsApp</h3>
@@ -314,7 +314,7 @@
                         <div class="contacto-content">
                             <h3>WhatsApp</h3>
                             <p>Messaggio rapido</p>
-                            <a href="https://wa.me/+393519389555" target="_blank" class="contacto-link whatsapp">
+                            <a href="https://wa.me/+393519389555?text=Ciao! Vorrei inviare un messaggio rapido. Potete aiutarmi?" target="_blank" class="contacto-link whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                                 <span>Invia messaggio</span>
                             </a>
@@ -379,7 +379,7 @@
                 <img src="assets/logo.png" alt="DEA Padel Logo">
             </div>
             <div class="footer-social">
-                <a href="https://wa.me/+393519389555" target="_blank" class="social-icon">
+                <a href="https://wa.me/+393519389555?text=Ciao! Vorrei contattarvi per informazioni sui vostri servizi." target="_blank" class="social-icon">
                     <i class="fab fa-whatsapp"></i>
                 </a>
                 <a href="https://www.instagram.com/dea.padel.riposto/" target="_blank" class="social-icon">
