--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><a href="#ubicacion">Ubicazione</a></li>
                         <li><a href="#contacto">Contatto</a></li>
                         <li><a href="news/">Noticias</a></li>
-                        <li><a href="https://wa.me/+393519389555?text=Hola! Vorrei prenotare un campo da padel o una lezione privata. Potete aiutarmi?" target="_blank" class="btn-reserva">
+                        <li><a href="https://wa.me/+393519389555?text=Ciao! Vorrei prenotare un campo da padel o una lezione privata. Potete aiutarmi?" target="_blank" class="btn-reserva">
                             <i class="fab fa-whatsapp"></i>
                             <span>Prenota Ora</span>
                         </a></li>
