--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,6 +55,7 @@
         "name": "DEA Padel Riposto",
         "description": "Club di padel professionale a Riposto, Sicilia. Campi da padel, lezioni private, tornei e servizi completi.",
         "url": "https://deapadel.it",
+        "logo": "https://deapadel.it/assets/logo.png",
         "telephone": "+393519389555",
         "email": "deasrls.padel@gmail.com",
         "address": {
@@ -102,8 +103,7 @@
         "sameAs": [
             "https://www.instagram.com/dea.padel.riposto/",
             "https://www.facebook.com/dea.padel.riposto"
-        ],
-        "logo": "https://deapadel.it/assets/logo.png"
+        ]
     }
     </script>
 </head>
