--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- Security Meta Tags -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    
     <!-- SEO Meta Tags -->
     <title>DEA Padel Riposto - Circolo di Padel a Riposto, Sicilia | Campi, Lezioni e Tornei</title>
     <meta name="description" content="DEA Padel Riposto: il miglior club di padel in Sicilia. Campi professionali, lezioni private, tornei e servizi completi. Prenota ora il tuo campo a Riposto!">
